@@ -1,3 +1,11 @@
+2022-11-29T16:01:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3575806466 # 658
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 78 91 / 79 93
+* notice: next accum: outdated-unq outdated-all / unq all: 79 93 / 80 94
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-11-12] / [2022-11-29]
+
 2022-11-12T08:00:38Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3450135573 # 606
 * notice: last 14d: unq all: 1 2
